--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,5 @@
+@import "./fonts.css";
+
 :root {
   --white: hsl(0, 0%, 96%);
   --black: hsl(0, 0%, 14%);
@@ -9,7 +11,16 @@
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
-  font-family: sans-serif;
+  font-family: "Muli", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
 }
 
 .header {
