--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,6 +12,8 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   font-family: "Muli", sans-serif;
+  font-weight: 200;
+  font-size: 1.33em;
 }
 
 h1,
@@ -30,4 +32,10 @@ h6 {
   justify-content: center;
   align-items: center;
   font-size: 3em;
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-color);
+  font-weight: 700;
 }
