:art: added image to cards

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,10 @@ body {
   font-size: 1.33em;
 }
 
+section {
+  margin: 3em;
+}
+
 h1,
 h2,
 h3,
@@ -56,8 +60,24 @@ a {
   background-color: var(--white);
   color: var(--black);
   border-radius: 8px;
+  transition: transform 0.15s;
+}
+
+.card:hover {
+  transform: scale(1.04);
 }
 
 .card-text-container {
   margin: 1.5em 1.5em;
+}
+
+.card-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-img > img {
+  height: 70%;
+  width: 70%;
 }
