--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,7 +14,7 @@ body {
   color: var(--text-color);
   font-family: "Muli", sans-serif;
   font-weight: 200;
-  font-size: 1.33em;
+  font-size: 1em;
 }
 
 section {
@@ -30,8 +30,8 @@ h6 {
   font-weight: 700;
 }
 
-h1 {
-  font-size: 1em;
+section h1 {
+  font-size: 2em;
 }
 
 .header {
@@ -63,19 +63,7 @@ a.text-link {
   color: var(--black);
   border-radius: 8px;
   transition: transform 0.15s;
-}
-
-.card h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 700;
-}
-
-.card p {
-  font-weight: 400;
+  font-size: 1.33em;
 }
 
 .card:hover {
@@ -83,10 +71,27 @@ h6 {
 }
 
 .card-text-container {
-  margin: 1.5em 1.5em;
+  margin: 0.5rem 1.5rem;
+}
+
+.card-text-container p {
+  font-weight: 400;
+  font-size: 1.25rem;
+  margin: 0.25em 0;
+}
+
+.card-text-container h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+  margin: 0.25em 0;
 }
 
 .card-img {
+  padding: 1.5em 1.5em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -94,8 +99,8 @@ h6 {
 }
 
 .card-img > img {
-  height: 70%;
-  width: 70%;
+  height: 60%;
+  width: 60%;
 }
 
 ul.tags {
@@ -106,8 +111,17 @@ ul.tags {
 }
 
 span.tag {
+  display: flex;
+  align-items: center;
+
   background-color: var(--light-gray);
   padding: 0.25em 0.5em;
   margin: 0.25em;
   border-radius: 8px;
+}
+
+span.tag img {
+  height: 1.1em;
+  width: 1.1em;
+  padding: 0 0.3em 0 0;
 }
