--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -15,3 +15,9 @@
   src: url("/fonts/Muli-Bold.ttf");
   font-weight: 700;
 }
+
+@font-face {
+  font-family: "MADE Dillan";
+  src: url("/fonts/MADE Dillan PERSONAL USE.otf");
+  font-weight: 400;
+}
