--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,6 +21,8 @@
   --off-white: #fcf1eb;
   --offer-white: #fde8dd;
   --offest-white: #fce4d4;
+
+  box-sizing: border-box;
 }
 
 /* @media (prefers) */
@@ -124,7 +126,7 @@ a.text-link {
 }
 
 .card-text-container {
-  margin: 0.5rem 1.5rem;
+  padding: 0.5rem 1.5rem;
 }
 
 .card-text-container p {
@@ -146,16 +148,21 @@ h6 {
 }
 
 .card-img {
-  padding: 1em 1em;
+  padding: 1.5em 1em 1em 1em;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  height: 280px;
+  width: 70%;
+  margin: auto;
 }
 
 .card-img > img {
-  height: 60%;
-  width: 60%;
+  width: 100%;
+  height: auto;
+  max-height: 260px;
+  max-width: 260px;
 }
 
 ul.tags {
